Update meta,title and content

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>FreeFolio - Freelancer Portfolio Template</title>
+    <title>Pavlína Březinová - výuka angličtiny</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="vyuka angličtiny, kutná hora, doučování, pavlína březinová, individuální doučování, angličtina, maturita doučování" name="keywords">
+    <meta content="Pavlína Březinová - doučování angličtiny" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -57,9 +57,10 @@
                     <img class="img-fluid rounded w-100" src="img/about.jpg" alt="">
                 </div>
                 <div class="col-lg-7">
-                    <h3 class="mb-4">23 let praxe výuky anglického jazyka</h3>
+                    <h3 class="mb-4">26 let praxe výuky anglického jazyka</h3>
                     <p>
                         <div class="col-sm-6 py-2"><h6>Magisterský titul PFUK Praha: <span class="text-secondary">Anglický jazyk a literatura</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Praxe: <span class="text-secondary">Dlouholetá zkušenost s výukou na jazykové škole a gymnáziu</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Telefon: <span class="text-secondary">+420 774 411 271</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary"><a href="mailto:info@pavlinabrezinova.cz">info@pavlinabrezinova.cz</a></span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Adresa výuky: <span class="text-secondary"><a href="https://goo.gl/maps/9RPvNfSgXSzeVTNi7">U Lesa 732, Kutná Hora 284 01</a></span></h6></div>
@@ -80,35 +81,30 @@
             </div>
             <div class="row">
                 <div class="col-lg-6">
-                    <h3 class="mb-4">Děti a studenti</h3>
+                    <h3 class="mb-4">Doučování</h3>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">350 Kč/hodina</h5>
+                            <h5 class="font-weight-bold mb-1">300 - 400 Kč/60 minut</h5>
                             <p>
                                 <ul>
-                                    <li>procvičování a opakování problematické látky, příprava na průběžné a opakovací testy, procvičování všech jazykových dovedností, pomoc s domácími úkoly
-                                atp.)</li>
+                                    <li>individuální výuka</li>
                                     <li>výuka zaměřená na rozvoj konverzačních dovedností </li>
                                     <li>příprava na přijímací a maturitní zkoušky</li>
                                     <li>pomoc při studiu odborného jazyka na VOŠ</li>
+                                    <li>příprava na pracovní pohovor</li>
+                                    <li>doučování (pomoc se zvládnutím učiva, procvičování a opakování, příprava na průběžné a opakovací procvičování problematické látky, procvičování všech jazykových dovedností)</li>
                                 </ul>
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <h3 class="mb-4">Dospělí</h3>
+                    <h3 class="mb-4">Další individální výuka</h3>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">400 Kč/hodina</h5>
-                            <p>
-                                <ul>
-                                    <li>výuka zaměřená na rozvoj konverzačních dovedností </li>
-                                    <li aria-rowspan="3">příprava na pracovní pohovor</li>
-                                </ul>
-                            </p>
+                            <h5 class="font-weight-bold mb-1">Cena dohodou</h5>
                         </div>
                     </div>
                 </div>
